--- a/CSS/memory.css
+++ b/CSS/memory.css
@@ -1,7 +1,7 @@
 div{
-    width: 1001px;
+    width: 100%;
     height: 800px;
-    
+    border: 0;
 }
 #intro{
     /* background-image: url(../pics/intro.jpg);
@@ -9,11 +9,12 @@ div{
     background-repeat: no-repeat; */
     background-color: red;
     position: relative;
+    display: none;
 
 }
 #game{
     background-color: blue;
-    display: none;
+    /* display: none; */
 
 }
 #aboutGame{
@@ -22,23 +23,55 @@ div{
 }
 .buttonsbox{
     position: absolute;
-    left:400px;
-    top:600px;
+    left:calc(50% - 150px);
+    top:500px;
     display: flex;
     flex-direction: column;
 }
 button{
-    width:200px;
-    height: 40px;
-    margin-bottom: 10px;
+    width:300px;
+    height: 50px;
+    margin-bottom: 30px;
 }
 .card{
-    height: 110px;
-    width: 80px;
+    height: 150px;
+    width: 150px;
     background-color: black;
-    margin-right: 99px;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-bottom: 0px;
+    border-radius: 50%;
 }
 table{
     position: absolute;
-    margin-top: 300px;
+    margin-top: 170px;
+    margin-left: calc(50% - 300px);
+    border: 1px solid black;
+}
+
+@media screen and (max-width: 600px) {
+    .card{
+        height: 100px;
+        width: 100px;
+        margin-right: 10px;
+        margin-left: 10px;
+        }
+    table{
+        margin-top: 280px;
+        /* margin-left: 50%; */
+        margin-left: calc(50% - 195px);
+    }
+}    
+@media screen and (min-width: 600px) and (max-width: 900px) {
+    .card{
+        height: 125px;
+        width: 125px;
+        margin-right: 10px;
+        margin-left: 10px;
+        }
+    table{
+        margin-top: 200px;
+        /* margin-left: 50%; */
+        margin-left: calc(50% - 235px);
+    }
 }
